; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_diff_tform.c_git_diff_find_similar__hashsig_for_buf.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_diff_tform.c_git_diff_find_similar__hashsig_for_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_diff_find_similar__hashsig_for_buf(i8** %0, i32* %1, i8* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i8** %0, i8*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %10, align 8
  %13 = ptrtoint i8* %12 to i64
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %11, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @GIT_UNUSED(i32* %15)
  %17 = load i8**, i8*** %6, align 8
  %18 = bitcast i8** %17 to i32**
  %19 = load i8*, i8** %8, align 8
  %20 = load i64, i64* %9, align 8
  %21 = load i32, i32* %11, align 4
  %22 = call i32 @git_hashsig_create(i32** %18, i8* %19, i64 %20, i32 %21)
  ret i32 %22
}

declare dso_local i32 @GIT_UNUSED(i32*) #1

declare dso_local i32 @git_hashsig_create(i32**, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
